# tagfs

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  index.rs  main.rs
src/file/: ino.rs  mod.rs
src/fs/: backing.rs  mod.rs  tag.rs
