[package]
name = "tagfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuser = "0.12.0"
clap = { version = "4.2.2", features = ["cargo"] }
libc = "0.2.141"
env_logger = "0.10.0"
strum = "0.24.1"
slotmap = "1.0.6"