[package]
name = "tagfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuser = "0.12.0"
clap = { version = "4.2", features = ["cargo", "derive"] }
libc = "0.2.141"
pretty_env_logger = "0.4.0"
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
serde = { version = "1.0", features = ["rc", "derive"] }
log = "0.4"
indexmap = { version = "1.9.3", features = ["serde"] }
anyhow = "1.0.71"
thiserror = "1.0.40"
bimap = { version = "0.6.3", features = ["serde"] }
